<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">移动图书管</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">放开以刷新</string>
    <string name="pull_to_refresh_refreshing_label">载入中...</string>
    -->
    <string name="pull_to_refresh_tap_label">点击这里刷新</string>
    <string name="user">用户名：</string>
    <string name="user_value">请输入用户名</string>
    <string name="password">密码：</string>
    <string name="password_value">请输入密码</string>
    <string name="login">登陆</string>
    <string name="reset">重置</string>
    <string name="student">学生</string>
    <string name="administrator">管理员</string>
    <string name="title_activity_login">移动图书管</string>
    <string name="title_activity_main">管理员端</string>
    <string name="book_management">图书管理</string>
    <string name="stu_management">学生管理</string>
    <string name="user_management">用户管理</string>
    <string name="query">查询图书</string>
    <string name="loss">挂失管理</string>
    <string name="order">预约管理</string>
    <string name="pay_free">欠费管理</string>
    <string name="logout">注销</string>
    <string name="exit">退出</string>
    <string name="more">更多</string>
    <string name="title_activity_book_management">图书管理</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_book_manage">图书管理</string>
    <string name="b_id">书号：</string>
    <string name="b_id_hint">请输入书号</string>
    <string name="b_query">查找图书</string>
    <string name="title_activity_book_info">图书信息</string>
    <string name="b_buytime">购买日期：</string>
    <string name="b_name">书名：</string>
    <string name="b_author">作者：</string>
    <string name="b_publishment">出版社：</string>
    <string name="borrowed">已借阅：</string>
    <string name="ordered">已预约：</string>
    <string name="introduction">简介：</string>
    <string name="add_book">添加图书</string>
    <string name="update_book">修改图书</string>
    <string name="delete_book">删除图书</string>
    <string name="b_num">书号：</string>
    <string name="share_book">分享图书</string>
    <string name="title_activity_update_book">修改图书</string>
    <string name="title_activity_user_mange">用户管理</string>
    <string name="title_activity_stu_mange">学生管理</string>
    <string name="s_num">学号：</string>
    <string name="s_name">姓名：</string>
    <string name="s_age">年龄：</string>
    <string name="s_sex">性别：</string>
    <string name="s_department">院系：</string>
    <string name="s_permitted">借书权限：</string>
    <string name="s_pwd">密码：</string>
    <string name="add_stu">添加学生</string>
    <string name="s_num_value">请输入学号</string>
    <string name="stu_query">查找学生</string>
    <string name="title_activity_stu_info">学生信息</string>
    <string name="update_stu">修改学生</string>
    <string name="delete_stu">删除学生</string>
    <string name="title_activity_update_stu">修改学生信息</string>
    <string name="title_activity_admin_mange">管理员管理</string>
    <string name="m_num">管理员用户名：</string>
    <string name="m_permitted">借阅许可：</string>
    <string name="m_pwd">管理员密码：</string>
    <string name="add_admin">添加管理员</string>
    <string name="mq_num_value">请输入管理员ID</string>
    <string name="admin_query">查找管理员</string>
    <string name="title_activity_admin_info">管理员信息</string>
    <string name="title_activity_update_admin">修改管理员信息</string>
    <string name="update_admin">修改管理员</string>
    <string name="admin_management">管理员管理</string>
    <string name="title_activity_stu_main">学生端</string>
    <string name="title_activity_qlobook">QLOBookActivity</string>
    <string name="title_activity_qbook">查询</string>
    <string name="title_activity_qbook_info">图书信息查询</string>
    <string name="title_activity_qbook_ordered">预约图书</string>
    <string name="title_activity_qbook_info_list">图书列表</string>
    <string name="b_press">出版社：</string>
    <string name="sq_button">查询</string>
    <string name="title_activity_qbook_info_list_detail">图书信息详情</string>
    <string name="borrow_book">借阅图书</string>
    <string name="order_book">预约图书</string>
    <string name="delete_admin">删除管理员</string>
    <string name="s_permitborrowtime">允许借书时间：</string>
    <string name="m_permitborrowtime">允许借阅时间：</string>
    <string name="count">数量：</string>
    <string name="title_activity_qbook_borrowed">已借图书列表</string>
    <string name="state">状态：</string>
    <string name="title_activity_borrowed_book_detail">已借图书详情</string>
    <string name="borrow_time">借书日期：</string>
    <string name="user_num">学号：</string>
    <string name="return_time">还书日期：</string>
    <string name="overtime">超期天数：</string>
    <string name="remain_time">剩余天数：</string>
    <string name="return_book">还书</string>
    <string name="loss_book">挂失</string>
    <string name="borrow_book_again">续借</string>
    <string name="order_b_num">请输入要预约的书号</string>
    <string name="manage_order_book">管理预约</string>
    <string name="query_book">查找</string>
    <string name="title_activity_order_book_detail">预约图书详情</string>
    <string name="help_value">本软件是一个大学移动图书管理系统，本系统分为学生端和管理员端，
        学生端可以实现对图书的查询，预约，借阅，挂失的功能；管理员端可以实现图书管理，学生管理，
        管理员管理，查询，预约，借阅，挂失，和管理欠费的功能。</string>
    <string name="about_software_value">移动图书管理系统1.0版  版权所有</string>
    <string name="title_activity_loss_book">挂失管理</string>
    <string name="loss_edit">请输入学号</string>
    <string name="q_stu_loss">查询</string>
    <string name="title_activity_loss_book_list">挂失图书列表</string>
    <string name="title_activity_pay_free">欠费管理</string>
    <string name="pay_edit">请输入学号</string>
    <string name="title_activity_pay_free_list">欠费图书列表</string>
    <string name="title_activity_pay_free_list_detail">欠费图书详情</string>
    <string name="should_pay_free">欠费：</string>
    <string name="pay_free_hint">欠费声明：欠费=（超期天数 * 0.02）元，请欠费的同学尽快交清欠费，方便你我他！愿您早借早还，避免金钱损失！</string>
    <string name="pay_free_return">还书并交纳欠费</string>
    <string name="main_book_query">图书信息查询</string>
    <string name="borrowed_book_query">已借图书查询</string>
    <string name="stu_query_book">查询</string>
    <string name="stu_loss_book">挂失</string>
    <string name="stu_order_book">预约</string>
    <string name="stu_logout">注销</string>
    <string name="stu_exit">退出</string>
    <string name="about_software">关于</string>
    <string name="help">帮助</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="chooser_image">选择图片</string>
    <string name="b_img">选择图片</string>
    <string name="title_activity_qq">qq</string>
    <string name="select_img">选择图片</string>
    <string name="loss_list_instructions">提示：亲，点击挂失图书列表的相应书籍可交纳欠费并取消挂失当前图书！</string>
    <string name="title_activity_save_now_user">SaveNowUserActivity</string>
    <string name="online_books">在线书城</string>
    <string name="relaxation">轻松一刻</string>
    <string name="title_activity_online_books">在线书城</string>

    <string-array name="online_books_item_name">
        <item>中国知网</item>
        <item>万方数据知识服务平台</item>
        <item>广西大学图书馆</item>
    </string-array>
    <string-array name="online_books_item_url">
        <item>http://www.cnki.net/</item>
        <item>http://www.wanfangdata.com.cn/</item>
        <item>http://www.lib.gxu.edu.cn/</item>
    </string-array>
    <string-array name="relaxation_item_name">
        <item>视频欣赏</item>
        <item>小说欣赏</item>
        <item>音频欣赏</item>
    </string-array>
    <string-array name="relaxation_item_url">
        <item>http://video.baidu.com/</item>
        <item>http://www.hao123.com/book</item>
        <item>http://www.hao123.com/music/wangzhi</item>
    </string-array>

    <string name="title_activity_web_view">网络资源</string>
    <string name="title_activity_relaxation">轻松一刻</string>
    <string name="should_return">应还日期：</string>
    <string name="title_activity_logo">移动图书管</string>
    <string name="title_activity_qbook_admin_borrowed">管理已借图书</string>
    <string name="title_activity_qborrowed_book_admin_list">QBorrowedBookAdminListActivity</string>
</resources>
