<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/padding_style"
    tools:context="com.gxu.booksystem.BookInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/b_num"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/b_num_value"
                    android:layout_width="wrap_content"
                    android:layout_weight="15"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/b_buytime"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/b_buytime_value"
                    android:layout_width="wrap_content"
                    android:layout_weight="15"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/b_name"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/b_name_value"
                    android:layout_width="wrap_content"
                    android:layout_weight="15"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/count"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/count_value"
                    android:layout_width="wrap_content"
                    android:layout_weight="15"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/b_author"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/b_author_value"
                    android:layout_width="wrap_content"
                    android:layout_weight="20"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/b_press"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/b_press_value"
                    android:layout_width="wrap_content"
                    android:layout_weight="40"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/b_img"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/b_img"
                    style="@style/btn_style"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/b_img_value"
                    android:layout_width="wrap_content"
                    android:layout_weight="40"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:text="@string/introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/introduction_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:enabled="true"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minLines="8"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:background="@android:drawable/edit_text" />

            <Button
                android:layout_width="wrap_content"
                android:id="@+id/add_book"
                android:layout_gravity="center"
                android:text="@string/add_book"
                style="@style/btn_style"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
